Prevent price from wrapping on next line

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,11 @@ h2 {
 .entry {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
+}
+
+.entry > h3 + h3 {
+    white-space: nowrap;
 }
 
 .entry-description {
